--- a/stylish/components/_paginations.scss
+++ b/stylish/components/_paginations.scss
@@ -5,9 +5,9 @@
 .pagination{
   text-align: center;
   >li{
-    margin: 0 3px;
+    margin: 0 $pag_item_move;
     >a, >span{
-      background-color: $pag_item_bg; color: $pag_item_text; font-size: 14px; padding: 10px 15px; display: block; @include border-radius($global_radius); @include transition-property(color, background-color); @include transition-duration(.3s);
+      background-color: $pag_item_bg; color: $pag_item_text; @include font_style($pag_item_txt_size); padding: $pag_item_padding_v $pag_item_padding_h; display: block; @include border-radius($global_radius); @include transition-property(color, background-color); @include transition-duration(.3s);
     }
     >a:hover{background-color: darken($pag_item_bg, 8%)}
 
