--- a/stylish/global/_global.scss
+++ b/stylish/global/_global.scss
@@ -2,7 +2,8 @@
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
-.hide   {display:none}
+.hide,
+.no-display{display:none}
 .show   {display:block}
 
 .left   {float:left}
