--- a/stylish/layout/magento/_static.scss
+++ b/stylish/layout/magento/_static.scss
@@ -1,20 +1,11 @@
-/* COMMON STUFF */
+/* STATIC LAYOUT */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
-//Grid correction if have nested grids
-.grid_correction{
-  @include grid_generate();
-}
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+//Global style
 
 
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
-//Block content
+//Specific block style
 
-
-/* ---------------------------------------------------------------------------------------------------------------------------------- */
-//Mini search form
-
-
-/* ---------------------------------------------------------------------------------------------------------------------------------- */
-//Mini cart
