--- a/stylish/components/_accordion.scss
+++ b/stylish/components/_accordion.scss
@@ -4,12 +4,12 @@
 
 .accordion{
   .a_head{
-    background-color: $accordion_head_color; padding: 10px; cursor: pointer;
+    background-color: $acc_head_color; padding: $acc_head_padding; cursor: pointer;
     i.a_state{ float: right}
     &.active i.a_state{@include rotate(180deg);}
   }
   .a_content{
-    display: none; background-color: $accordion_content_color; padding: 20px 10px;
+    display: none; background-color: $acc_content_color; padding: $acc_content_padding;
     &.active{ display: block;@include animation(fadeIn .5s);}
   }
 }
