--- a/stylish/components/_divider.scss
+++ b/stylish/components/_divider.scss
@@ -4,5 +4,5 @@
 
 /* Content divider with top and bottom margin classes */
 .divider{
-  border-bottom: 1px solid $divider_border_color; width: 100%; display: block;
+  border-bottom: $divider_border_size $divider_border_style $divider_border_color; width: 100%; display: block;
 }
