--- a/stylish/components/_msg.scss
+++ b/stylish/components/_msg.scss
@@ -3,16 +3,16 @@
 
 
 .messages, .msg{
-  margin-bottom: 30px; list-style: none;
+  margin-bottom: $msg_move; list-style: none;
 
   li{
-    list-style: none; font-size: 14px;
+    list-style: none; @include font_style($msg_txt_size);
     &:last-child{ margin-bottom: 0}
   }
 
   > li{
-    color: $msg_txt_color; padding:10px 10px 10px $msg_icon_size+30px;@include border-radius($global_radius); position: relative; margin-bottom: 20px;
-    &:before{@extend .sy_icon;font-size: $msg_icon_size; position: absolute; left: 15px; top: 50%; margin-top: -$msg_icon_size/2;}
+    color: $msg_txt_color; padding:$msg_item_padding $msg_item_padding $msg_item_padding ($msg_icon_size + ($msg_item_padding*2));@include border-radius($global_radius); position: relative; margin-bottom: $msg_item_move;
+    &:before{@extend .sy_icon;font-size: $msg_icon_size; position: absolute; left: $msg_item_padding; top: 50%; margin-top: -$msg_icon_size/2;}
 
     //Error state
     &.error-msg,
