--- a/stylish/components/_tooltip.scss
+++ b/stylish/components/_tooltip.scss
@@ -12,7 +12,7 @@
 
 //Tooltip
 .tip {
-  position: absolute; padding: 10px; text-align: center; max-width: 300px; font-size: 14px; line-height: 18px;@include border-radius($global_radius); @include box-shadow(rgba($tooltip_content_shadow, 0.1) 1px 1px 2px 0px);z-index: 500;
+  position: absolute; padding: $tip_padding; text-align: center; max-width: $tip_max_width; @include font_style($p, $p+$lh); @include border-radius($global_radius); @include box-shadow(rgba($tooltip_content_shadow, 0.1) 1px 1px 2px 0px);z-index: 500;
   &:after,
   &:before{
     content: ""; position: absolute; width: 0; height: 0; border: $tooltip_arrow solid transparent;
@@ -80,7 +80,7 @@
 
 
   //Tip Details Style
-  .tip_title{ font-size: 18px; line-height: 21px; margin-bottom: 5px; display: block}
+  .tip_title{ @include font_style($p, $p+$lh); margin-bottom: 5px; display: block}
 }
 
 
