--- a/stylish/layout/magento/_cart.scss
+++ b/stylish/layout/magento/_cart.scss
@@ -1,20 +1,24 @@
-/* COMMON STUFF */
+/* CART LAYOUT */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
-//Grid correction if have nested grids
-.grid_correction{
-  @include grid_generate();
-}
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+//Cart page product table item
 
 
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
-//Block content
+//Small table on account overview
 
 
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
-//Mini search form
+//Sales overview page
 
 
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
-//Mini cart
+//Sales order detail page
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+//Cart page
+
+
