--- a/stylish/layout/magento/_customer.scss
+++ b/stylish/layout/magento/_customer.scss
@@ -1,20 +1,24 @@
-/* COMMON STUFF */
+/* CUSTOMER LAYOUT */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
-//Grid correction if have nested grids
-.grid_correction{
-  @include grid_generate();
-}
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+//Logout page
 
 
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
-//Block content
+//Password reset
 
 
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
-//Mini search form
+//Login
 
 
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
-//Mini cart
+//Account
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+//Newsletter
+
+
